syntax = "proto3";

package pb;
import "barber/barber_shop.proto";

option go_package = "barbershop/src/pb/barber";


message GetBarberShopRequest {
    string shop_id = 1;
}

message GetBarberShopResponse {
    BarberShop barber_shop = 1;
}