syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb";

message Barber {
    string barber_id = 1;
    string shop_id = 2;
    string nick_name = 3;
    string full_name = 4;
    string phone = 5;
    string email = 6;
    int32 gender = 7;
    int32 role = 8;
    string avatar = 9;
    int32 status = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp update_at = 12;
    google.protobuf.Timestamp password_changed_at = 13;
}